--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-plx": "^2.1.2",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "sass": "^1.69.5",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
